--- a/src/components/Quiz/quiz.css
+++ b/src/components/Quiz/quiz.css
@@ -13,7 +13,9 @@
     color: whitesmoke;
 }
 .formTile input{
-    padding-left: 5px;
+    margin-left: 15px;
+    margin-bottom: 0;
+    padding: 0, 0, 0, 0;
 }
 .formTile label {
     padding-left: 5px;
