--- a/src/components/Quiz/quiz.css
+++ b/src/components/Quiz/quiz.css
@@ -4,6 +4,7 @@
     padding: 0 5% 0 5%;
     border-radius: 5px;
     border-color: whitesmoke;
+    padding-bottom: 15px;
 }
 .formTile h1{
     text-align: center;
@@ -11,7 +12,11 @@
     color: white;
 }
 .formTile p {
-    color: whitesmoke;
+        color: whitesmoke;
+        margin-top: 15px;
+        margin-left: 20px;
+        margin-bottom: 0 !important;
+        font-size: large;
 }
 .formTile input{
     margin-left: 15px;
@@ -25,7 +30,74 @@
 .submitbutton {
     background-color: rgb(179, 153, 153);
     border-radius: 7px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-right: 5%;
     float: right;
 }
+.option-input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+    position: relative;
+    top: 13.33333px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 35px;
+    width: 35px;
+    transition: all 0.15s ease-out 0s;
+    background: #cbd1d8;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    margin-right: 0.5rem;
+    outline: none;
+    position: relative;
+    z-index: 1000;
+  }
+  .option-input:hover {
+    background: #9faab7;
+  }
+  .option-input:checked {
+    background: black;
+  }
+  .option-input:checked::before {
+    height: 35px;
+    width: 35px;
+    position: absolute;
+    display: inline-block;
+    font-size: 26.66667px;
+    text-align: center;
+    line-height: 35px;
+  }
+  .option-input:checked::after {
+    -webkit-animation: click-wave 0.65s;
+    -moz-animation: click-wave 0.65s;
+    animation: click-wave 0.65s;
+    background: #40e0d0;
+    content: '';
+    display: block;
+    position: relative;
+    z-index: 100;
+  }
+  .option-input.radio {
+    border-radius: 50%;
+  }
+  .option-input.radio::after {
+    border-radius: 50%;
+  }
+
+  .isCorrect {
+    background: green !important;
+    content: '✔';
+  }
+
+  .isIncorrect {
+    background: red !important;
+    content: 'X';
+  }
+ 
+
