new videos have been created

--- a/src/components/Quiz/quiz.css
+++ b/src/components/Quiz/quiz.css
@@ -27,7 +27,7 @@
     padding-left: 5px;
     color: white;
 }
-.submitbutton {
+.submitButton {
     background-color: rgb(179, 153, 153);
     border-radius: 7px;
     margin-top: 20px;
