colours changed due to feedback

--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,5 +1,5 @@
 ﻿.sideBar-body {
-  background-color: #696969;
+  background-color: #46658C;
   color: white;
   text-align: center;
   margin-left: 5px;
