--- a/src/custom.css
+++ b/src/custom.css
@@ -25,7 +25,7 @@ code {
 }
 
 .main-body {
-  background-color: #A9A9A9;
+  background-color: #6c9bd9;
   padding: 10px;
   border-style: solid;
   border-width: medium;
@@ -44,7 +44,7 @@ code {
  
 }
 .mainWeb-body{
-  background-color:#675e5e;
+  background-color:#26374d;
 }
 .block {
   margin-top: 20px;
